--- a/style.css
+++ b/style.css
@@ -7,26 +7,26 @@ body {
 }
 
 #menu {
-    margin-top: 100px;
+    margin-top: 150px;
 }
 
 h1 {
     font-size: 40px;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 }
 
-.buttons button {
+button {
     font-size: 20px;
     padding: 15px 30px;
     margin: 10px;
     cursor: pointer;
-    border: none;
     border-radius: 8px;
+    border: none;
 }
 
 canvas {
     display: none;
-    margin: 50px auto;
+    margin: 40px auto;
     background: #111;
     border: 4px solid white;
 }
