--- a/labyrinthe/style.css
+++ b/labyrinthe/style.css
@@ -1,1 +1,20 @@
+body {
+    background: black;
+    color: white;
+    text-align: center;
+    font-family: Arial;
+}
+
+canvas {
+    border: 2px solid white;
+    background: #111;
+}
+
+.hidden {
+    display: none;
+}
+
+#hud {
+    margin-bottom: 10px;
+}
 
